# lra-nurbs

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  TODO.md  adding_new_surface.md  engine_config.json  imgui.ini  math_migration.md  particle_roles_and_constraints.md  refactor_progress.md
.github/: copilot-instructions.md
cmake/: CompileShaders.cmake
docker/: linux-clang.Dockerfile
src/: CMakeLists.txt
src/app/: AlternateViewPanel.hpp  AnimatedCurve.cpp  AnimatedCurve.hpp  ContourWindowRenderer.hpp  CoordDebugPanel.hpp  Curve2DOverlay.hpp  FrenetFrame.hpp  GaussianRipple.hpp  GoalStatusPanel.hpp  HotkeyManager.hpp  HoverResult.hpp  IntegrationLabAnalyticsPackets.cpp  IntegrationLabAnalyticsPackets.hpp  IntegrationLabRenderPackets.cpp  IntegrationLabRenderPackets.hpp  IntegrationWorkbenchState.cpp  IntegrationWorkbenchState.hpp  PanelHost.hpp  ParticleBehaviors.hpp  ParticleFactory.hpp  ParticleGoals.hpp  ParticleInspectorPanel.hpp  ParticleSwarmFactory.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleTypes.hpp  PerformancePanel.hpp  ProjectedParticleOverlay.hpp  ProjectedSurfaceCanvas.hpp  SceneFactories.cpp  SceneFactories.hpp  SimulationContext.hpp  SimulationControlPanel.hpp  SimulationIntegrationDerivativeLab.cpp  SimulationIntegrationDerivativeLab.hpp  SimulationLabPicker.cpp  SimulationLabPicker.hpp  SimulationPanelModels.hpp  SimulationRenderPackets.hpp  SimulationTaylorExpansionLab.cpp  (+11 more)
src/engine/: AppConfig.cpp  AppConfig.hpp  CameraInputController.hpp  CameraService.hpp  CameraTypes.hpp  CanvasInput.hpp  Engine.cpp  Engine.hpp  EngineAPI.hpp  HotkeyService.hpp  IScene.hpp  ISimulation.hpp  InteractionService.hpp  PanelService.hpp  PrimitiveRenderer.hpp  RenderService.hpp  RenderSubmission.hpp  RuntimeIds.hpp  ScopedServiceHandles.hpp  ServiceHandle.hpp  SimulationClock.hpp  SimulationHost.hpp  SimulationMetadata.hpp  SimulationRuntime.cpp  SimulationRuntime.hpp  ViewInputService.hpp
src/engine/capture/: CaptureService.cpp  CaptureService.hpp  CaptureTypes.hpp
src/engine/diagnostics/: DiagnosticsService.cpp  DiagnosticsService.hpp  DiagnosticsTypes.hpp
src/engine/events/: AppEvent.hpp  EventBusService.cpp  EventBusService.hpp  SimEvent.hpp
src/engine/logging/: LoggerService.cpp  LoggerService.hpp  LoggerTypes.hpp
src/engine/metadata/: MetadataTypes.hpp  SimMetadataService.cpp  SimMetadataService.hpp
src/engine/metricservice/: MetricsService.cpp  MetricsService.hpp  MetricsTypes.hpp
src/engine/resources/: ResourceManagerService.cpp  ResourceManagerService.hpp  ResourceTypes.hpp
src/engine/text/: TextOverlayService.cpp  TextOverlayService.hpp
src/engine/threading/: ThreadManagementService.cpp  ThreadManagementService.hpp  ThreadTypes.hpp
src/math/: Axes.cpp  Axes.hpp  Conics.cpp  Conics.hpp  ExtremumSurface.hpp  ExtremumTable.cpp  ExtremumTable.hpp  GeometryTypes.hpp  Scalars.hpp  SineRationalSurface.hpp  Surfaces.cpp  Surfaces.hpp  Types.hpp
src/math/integration/: Integration1D.cpp  Integration1D.hpp  Integration2D.cpp  Integration2D.hpp
src/memory/: ArenaSlice.hpp  BufferManager.cpp  BufferManager.hpp  Containers.hpp  MemoryService.cpp  MemoryService.hpp  Unique.hpp
src/numeric/: Constants.hpp  Differentiator.hpp  MathTraits.hpp  Vec3Ops.hpp  math_config.hpp  ops.hpp
src/old/: AnalysisSpawner.cpp  AnalysisSpawner.hpp  GaussianSurface.cpp  GaussianSurface.hpp  MultiWellSpawner.cpp  MultiWellSpawner.hpp  README.md  SimulationAnalysis.cpp  SimulationAnalysis.hpp  SimulationDelayDifferential2D.cpp  SimulationDelayDifferential2D.hpp  SimulationDifferential2D.cpp  SimulationDifferential2D.hpp  SimulationMultiWell.cpp  SimulationMultiWell.hpp  SimulationSceneBase.hpp  SimulationSurfaceGaussian.cpp  SimulationSurfaceGaussian.hpp  SurfaceSimSpawner.cpp  SurfaceSimSpawner.hpp  WavePredatorPreySpawner.cpp  WavePredatorPreySpawner.hpp
src/platform/: GlfwContext.cpp  GlfwContext.hpp  VulkanContext.cpp  VulkanContext.hpp
src/renderer/: GpuTypes.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Pipeline.cpp  Pipeline.hpp  PngWriter.hpp  Renderer.cpp  Renderer.hpp  SecondWindow.cpp  SecondWindow.hpp  Swapchain.cpp  Swapchain.hpp
src/sim/: BiasedBrownianLeader.hpp  BrownianMotion.hpp  DelayDifferentialSystem.hpp  DelayPursuitEquation.hpp  DifferentialSystem.hpp  DirectPursuitEquation.hpp  DomainConfinement.hpp  EulerIntegrator.hpp  GradientWalker.hpp  HistoryBuffer.hpp  IConstraint.hpp  IEquation.hpp  IIntegrator.hpp  LeaderSeekerEquation.hpp  LevelCurveWalker.hpp  MilsteinIntegrator.hpp  MinDistConstraint.hpp  MomentumBearingEquation.hpp
src/simulation/events/: AlertRule.cpp  AlertRule.hpp  EngineEventTypes.hpp  EventBus.cpp  EventBus.hpp  EventLog.cpp  EventLog.hpp  EventRecord.hpp  EventRing.hpp  SimEventTypes.hpp
src/simulation/fields/: DampingField.hpp  IField.cpp  IField.hpp  MetricRipple.hpp
src/simulation/scenario/: AgentSpec.hpp  ScenarioBuilder.cpp  ScenarioBuilder.hpp
src/simulation/spawn/: SpawnMode.hpp
src/telemetry/: TelemetryBuffer.hpp  TelemetryRecord.hpp  TelemetryService.cpp  TelemetryService.hpp  TelemetryWriter.cpp  TelemetryWriter.hpp
src/units/: QuantityTypes.hpp
tests/: CMakeLists.txt  test_all_simulations.cpp  test_alternate_view_builders.cpp  test_app_config.cpp  test_axes.cpp  test_capture_service.cpp  test_conics.cpp  test_diagnostics_service.cpp  test_differential_system.cpp  test_engine_services.cpp  test_event_bus_service.cpp  test_gravitational_systems.cpp  test_history_buffer.cpp  test_integration2d_core.cpp  test_integration_lab_analytics_packets.cpp  test_integration_lab_core.cpp  test_integration_lab_render_packets.cpp  test_integration_workbench_state.cpp  test_logger_service.cpp  test_metrics_service.cpp  test_milstein_integrator.cpp  test_mp_units_integration.cpp  test_numeric.cpp  test_particle_system.cpp  test_resource_manager_service.cpp  test_sim_metadata_service.cpp  test_simulation_context.cpp  test_simulation_runtime.cpp  test_simulation_surface_gaussian.cpp  test_surface_mesh_cache.cpp  test_surface_metadata.cpp  test_text_overlay_service.cpp  test_thread_management_service.cpp
(+35 files in other folders)
